header margin, burger position fix on mobile devices

--- a/src/scss/components/burger.scss
+++ b/src/scss/components/burger.scss
@@ -24,4 +24,8 @@
     @media (max-width: $tablet){
         display: block;
     }
+
+    @media (max-width: $mobile-landscape) and (max-height: $mobile-landscape) {
+        top: 10px;
+    }
 }
